update with hero block for video redesign

--- a/index.html
+++ b/index.html
@@ -17,40 +17,11 @@
 
 <body>
     <!-- 
-            Producer-title-banner.html: 
-            data-less-file="passport-title-banner.less" 
+            video-hero.html: 
+            data-less-file="video-hero.less" 
         -->
-    @@include('src/blocks/producer-title-banner.html')
-    <!-- 
-            Producer-hero.html: 
-            data-less-file="passport-hero.less" 
-        -->
-    @@include('src/blocks/producer-hero.html')
-    <!-- 
-            Producer-giving.html: 
-            data-less-file="passport-giving.less" 
-        -->
-    @@include('src/blocks/producer-giving.html')
-    <!-- 
-            producer-events.html: 
-            data-less-file="passport-hero.less" 
-        -->
-    @@include('src/blocks/producer-events.html')
-    <!-- 
-            producer-facebook.html: 
-            data-less-file="passport-facebook.less" 
-        -->
-    @@include('src/blocks/producer-facebook.html')
-    <!-- 
-            producer-testimonial.html: 
-            data-less-file="passport-testimonial.less" 
-        -->
-    @@include('src/blocks/producer-testimonial.html')
-    <!-- 
-            producer-engaged.html: 
-            data-less-file="passport-engaged.less" 
-        -->
-    @@include('src/blocks/producer-engaged.html')
+    @@include('src/blocks/video-hero.html')
+
     <script src="https://unpkg.com/flickity@2.2.2/dist/flickity.pkgd.min.js"></script>
     <script src="@@webRoot/dist/js/main.min.js"></script>
 </body>
