completion of the top portion

--- a/src/blocks/video-hero.html
+++ b/src/blocks/video-hero.html
@@ -46,7 +46,106 @@
         </div>
             <div class="video-hero-side">
                 <div class="video-hero-side-list">
-                    <p>More</p>
+                    <p><a href="#">More</a></p>
+                    <div class="video-hero-side-list-item">
+                        <a class="video-hero-side-list-item-link" href="#">
+
+                            <svg width="26px" height="26px" viewBox="0 0 26 26" version="1.1"
+                                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <g id="circle" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                    <g id="KPBS_Video_Landing_Page_all_videos_v2"
+                                        transform="translate(-824.000000, -409.000000)">
+                                        <g id="s-top-videos" transform="translate(0.000000, 170.000000)">
+                                            <g id="right" transform="translate(809.000000, 92.000000)">
+                                                <g id="article-container" transform="translate(0.000000, 64.000000)">
+                                                    <g id="play-button" transform="translate(15.000000, 83.000000)">
+                                                        <circle id="Oval" stroke="#FFFFFF" cx="12.7210884"
+                                                            cy="12.7210884" r="12.2210884"></circle>
+                                                        <g id="Vector" transform="translate(10.384410, 8.881900)"
+                                                            fill="#FFFFFF" fill-rule="nonzero">
+                                                            <polygon id="arrow" points="0 7 0 0 5.76470435 3.50000093">
+                                                            </polygon>
+                                                        </g>
+                                                    </g>
+                                                </g>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </svg>
+                            <img src="@@webRoot/dist/img/sidebar-1.jpg" alt="">
+                        </a>
+                        <a class="video-hero-side-list-item-content" href="#">
+                            <p>12 hours ago</p>
+                                <p>The Plastic Problem: Exploring what is lorem ipsum in beyond in San Diego </p>
+                        </a>
+                    </div>
+                    <div class="video-hero-side-list-item">
+                        <a class="video-hero-side-list-item-link" href="#">
+
+                            <svg width="26px" height="26px" viewBox="0 0 26 26" version="1.1"
+                                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <g id="circle" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                    <g id="KPBS_Video_Landing_Page_all_videos_v2"
+                                        transform="translate(-824.000000, -409.000000)">
+                                        <g id="s-top-videos" transform="translate(0.000000, 170.000000)">
+                                            <g id="right" transform="translate(809.000000, 92.000000)">
+                                                <g id="article-container" transform="translate(0.000000, 64.000000)">
+                                                    <g id="play-button" transform="translate(15.000000, 83.000000)">
+                                                        <circle id="Oval" stroke="#FFFFFF" cx="12.7210884"
+                                                            cy="12.7210884" r="12.2210884"></circle>
+                                                        <g id="Vector" transform="translate(10.384410, 8.881900)"
+                                                            fill="#FFFFFF" fill-rule="nonzero">
+                                                            <polygon id="arrow" points="0 7 0 0 5.76470435 3.50000093">
+                                                            </polygon>
+                                                        </g>
+                                                    </g>
+                                                </g>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </svg>
+                            <img src="@@webRoot/dist/img/sidebar-1.jpg" alt="">
+                        </a>
+                        <a class="video-hero-side-list-item-content" href="#">
+                            <p>12 hours ago</p>
+                                <p>The Plastic Problem: Exploring what is lorem ipsum in beyond in San Diego </p>
+                        </a>
+                    </div>
+                    <div class="video-hero-side-list-item">
+                        <a class="video-hero-side-list-item-link" href="#">
+
+                            <svg width="26px" height="26px" viewBox="0 0 26 26" version="1.1"
+                                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <g id="circle" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                    <g id="KPBS_Video_Landing_Page_all_videos_v2"
+                                        transform="translate(-824.000000, -409.000000)">
+                                        <g id="s-top-videos" transform="translate(0.000000, 170.000000)">
+                                            <g id="right" transform="translate(809.000000, 92.000000)">
+                                                <g id="article-container" transform="translate(0.000000, 64.000000)">
+                                                    <g id="play-button" transform="translate(15.000000, 83.000000)">
+                                                        <circle id="Oval" stroke="#FFFFFF" cx="12.7210884"
+                                                            cy="12.7210884" r="12.2210884"></circle>
+                                                        <g id="Vector" transform="translate(10.384410, 8.881900)"
+                                                            fill="#FFFFFF" fill-rule="nonzero">
+                                                            <polygon id="arrow" points="0 7 0 0 5.76470435 3.50000093">
+                                                            </polygon>
+                                                        </g>
+                                                    </g>
+                                                </g>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </svg>
+                            <img src="@@webRoot/dist/img/sidebar-1.jpg" alt="">
+                        </a>
+                        <a class="video-hero-side-list-item-content" href="#">
+                            <p>12 hours ago</p>
+                                <p>The Plastic Problem: Exploring what is lorem ipsum in beyond in San Diego </p>
+                        </a>
+                    </div>
                     <div class="video-hero-side-list-item">
                         <a class="video-hero-side-list-item-link" href="#">
 
