update with video grid

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             data-less-file="video-hero.less" 
         -->
     @@include('src/blocks/video-hero.html')
+    <!-- 
+            video-list-grid.html: 
+            data-less-file="video-list-grid.less" 
+        -->
+    @@include('src/blocks/video-list-grid.html')
 
     <script src="https://unpkg.com/flickity@2.2.2/dist/flickity.pkgd.min.js"></script>
     <script src="@@webRoot/dist/js/main.min.js"></script>
