completion of subpage

--- a/src/blocks/video-list-grid.html
+++ b/src/blocks/video-list-grid.html
@@ -4,7 +4,7 @@
             <h3>More Videos</h3>
         </div>
         <div class="video-grid-header-show">
-            <p>Seal All Videos</p>
+            <p><a href="#">Seal All Videos</a></p>
 
             <svg width="6px" height="8px" viewBox="0 0 6 8" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink">
