--- a/subpage.html
+++ b/subpage.html
@@ -17,10 +17,10 @@
 
 <body>
     <!-- 
-            video-hero.html: 
-            data-less-file="video-hero.less" 
+            video-hero-subpage.html: 
+            data-less-file="video-hero-subpage.less" 
         -->
-    @@include('src/blocks/video-hero.html')
+    @@include('src/blocks/video-hero-subpage.html')
     <!-- 
             video-list-grid.html: 
             data-less-file="video-list-grid.less" 
